Stop book divs from overflowing their containers

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
     border: 10px solid var(--darkBrown);
     border-radius: 1rem;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 1rem;
     grid-column: 1 / 2;
 }
@@ -37,7 +37,7 @@ body {
     background-color: #fff7ed;
     border-radius: 1rem;
     margin: 1rem;
-    height: 100px;
+    height: min-content;
     padding: 1rem;
     box-shadow: 5px 5px 0px var(--darkBrown);
 }
